# brainprep

./: .buildinfo  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  index.html  objects.inv  pixi.toml  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/: run_examples.py  run_unitests.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  help.md  installation_issue.md
.github/workflows/: documentation.yml  pep8.yml  testing.yml
_downloads/1abf5617581553b2bdae12d1c3f79ef3/: plot_fmriprep.ipynb
_downloads/4f97d36d25a0f5f7f6d6ec38a2408667/: plot_cat12vbm.py
_downloads/a172279cf57674f4e18b39641d159de9/: plot_mriqc.ipynb
_downloads/aed712fb1c8350d7751bb80beda1eb39/: plot_quasiraw.ipynb
_downloads/b118bd12b04f0784e55eb6613baa0916/: plot_cat12vbm.ipynb
_downloads/dcea44dc6cb9ef1ac598c3858962025b/: plot_fsreconall.ipynb
_modules/: index.html
_modules/brainprep/: color_utils.html  connectivity.html  cortical.html  deface.html  plotting.html  qc.html  spatial.html  tbss.html  utils.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_gallery/: index.rst.txt  plot_cat12vbm.rst.txt  plot_fmriprep.rst.txt  plot_fsreconall.rst.txt  plot_mriqc.rst.txt  plot_quasiraw.rst.txt  sg_execution_times.rst.txt
auto_gallery/: index.html  plot_cat12vbm.html  plot_fmriprep.html  plot_fsreconall.html  plot_mriqc.html  plot_quasiraw.html  sg_execution_times.html
brainprep/: __init__.py  color_utils.py  connectivity.py  cortical.py  deface.py  dwi.py  dwitools.py  info.py  plotting.py  qc.py  qc_utils.py  spatial.py  tbss.py  utils.py
containers/: Dockerfile  Dockerfile.anat  Dockerfile.dmriprep  Dockerfile.dmriprep_test  Dockerfile.fmriprep  Dockerfile.mriqc  Singularity.dmriprep  generate_images.py
doc/: requirements.txt
doc/source/: conf.py
examples/: README.txt  plot_cat12vbm.py  plot_fmriprep.py  plot_fsreconall.py  plot_mriqc.py  plot_quasiraw.py
(+38 files in other folders)
