[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brainprep"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {name = "brainprep developers", email = "antoine.grigis@cea.fr"},
]
license = {text = "CeCILL-B"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "nibabel",
    "pandas",
    "scikit-learn",
    "nilearn",
    "matplotlib",
    "seaborn",
    "requests",
    "progressbar2",
    "fire"
]
dynamic = ["version"]

#[project.scripts]
#brainprep = "brainprep/scripts/brainprep"

[project.urls]
Source = "https://github.com/neurospin-deepinsight/brainprep"
Tracker = "https://github.com/neurospin-deepinsight/brainprep/issues"

[tool.setuptools]
platforms = ["Linux", "OSX"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "brainprep.info.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
brainprep = [
    "tests/*.py",
    "resources/*.m",
    "resources/*.nii.gz",
    "workflow/resources/*.csv",
    "workflow/resources/*.tsv",
]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
]

[tool.ruff]
extend-exclude = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"
